Crash loading large images #36187

Closed
opened 2013-07-17 14:12:23 +02:00 by Moritz Grauter · 17 comments

%%%Ubuntu 12.04, 64-bit, integrated graphics

I have a file for which the Render (internal) works fine in 2.63a. I tried 2.64, 2.65, 2.66 and for all of these, blender crashes during rendering. In some cases a box made of crosshairs appears. The blend file is too large to attach but the error is:

Mapalloc returns null, fallback to regular malloc: len=18446744071562067968 in imb_addrectfloatImBuf, total 2984453768
Calloc returns null: len=18446744071562067968 in imb_addrectfloatImBuf, total 3128584624

Backtrace:

Blender 2.67 (sub 0), Revision: 57123

bpy.ops.object.select_all(action='TOGGLE') # Operator
bpy.ops.object.select_all(action='TOGGLE') # Operator
bpy.ops.object.delete(use_global=False) # Operator
bpy.ops.scene.delete() # Operator
bpy.context.scene.name = "Scene" # Property
bpy.context.scene.world.name = "World" # Property

backtrace

./blender() [0xf24c39]
./blender() [0xf24e77]
/lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7f6ba665f4a0]
./blender(imb_loadpng+0x7cb) [0x15ec2fb]
./blender(IMB_ibImageFromMemory+0x80) [0x15e0a00]
./blender(IMB_loadifffile+0x70) [0x15e0bb0]
./blender(IMB_loadiffname+0x4c) [0x15e0c8c]
./blender() [0x1431518]
./blender() [0x14318f5]
./blender(BKE_image_pool_acquire_ibuf+0x115) [0x1432105]
./blender(imagewraposa+0x846) [0x12a3306]
./blender() [0x125e32c]
./blender() [0x12605f4]
./blender(do_material_tex+0x253) [0x12615f3]
./blender(shade_lamp_loop+0xf7f) [0x12b8daf]
./blender(shade_material_loop+0x16) [0x12bd786]
./blender(shade_input_do_shade+0x4a) [0x12bdaea]
./blender(shade_samples+0xf6) [0x12c2836]
./blender() [0x128f376]
./blender(zbufshadeDA_tile+0x38b) [0x12915bb]
./blender() [0x1288954]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x7e9a) [0x7f6ba6febe9a]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f6ba671cccd]

%%%

%%%Ubuntu 12.04, 64-bit, integrated graphics I have a file for which the Render (internal) works fine in 2.63a. I tried 2.64, 2.65, 2.66 and for all of these, blender crashes during rendering. In some cases a box made of crosshairs appears. The blend file is too large to attach but the error is: Mapalloc returns null, fallback to regular malloc: len=18446744071562067968 in imb_addrectfloatImBuf, total 2984453768 Calloc returns null: len=18446744071562067968 in imb_addrectfloatImBuf, total 3128584624 Backtrace: # Blender 2.67 (sub 0), Revision: 57123 bpy.ops.object.select_all(action='TOGGLE') # Operator bpy.ops.object.select_all(action='TOGGLE') # Operator bpy.ops.object.delete(use_global=False) # Operator bpy.ops.scene.delete() # Operator bpy.context.scene.name = "Scene" # Property bpy.context.scene.world.name = "World" # Property # backtrace ./blender() [0xf24c39] ./blender() [0xf24e77] /lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7f6ba665f4a0] ./blender(imb_loadpng+0x7cb) [0x15ec2fb] ./blender(IMB_ibImageFromMemory+0x80) [0x15e0a00] ./blender(IMB_loadifffile+0x70) [0x15e0bb0] ./blender(IMB_loadiffname+0x4c) [0x15e0c8c] ./blender() [0x1431518] ./blender() [0x14318f5] ./blender(BKE_image_pool_acquire_ibuf+0x115) [0x1432105] ./blender(imagewraposa+0x846) [0x12a3306] ./blender() [0x125e32c] ./blender() [0x12605f4] ./blender(do_material_tex+0x253) [0x12615f3] ./blender(shade_lamp_loop+0xf7f) [0x12b8daf] ./blender(shade_material_loop+0x16) [0x12bd786] ./blender(shade_input_do_shade+0x4a) [0x12bdaea] ./blender(shade_samples+0xf6) [0x12c2836] ./blender() [0x128f376] ./blender(zbufshadeDA_tile+0x38b) [0x12915bb] ./blender() [0x1288954] /lib/x86_64-linux-gnu/libpthread.so.0(+0x7e9a) [0x7f6ba6febe9a] /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x7f6ba671cccd] %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%We need the file to fix and reproduce the error, try to upload it to another service (like pasteall.org) %%%

%%%We need the file to fix and reproduce the error, try to upload it to another service (like pasteall.org) %%%

%%%How much RAM do you have? Maybe running out of memory. %%%

%%%How much RAM do you have? Maybe running out of memory. %%%
Author

%%%24 GB :)%%%

%%%24 GB :)%%%
Author

%%%The file is about 300 MB in size%%%

%%%The file is about 300 MB in size%%%

%%%Well, we need a way to reproduce the error and get a useful backtrace from it. Maybe you can simplify the file , while keeping the error?
%%%

%%%Well, we need a way to reproduce the error and get a useful backtrace from it. Maybe you can simplify the file , while keeping the error? %%%

%%%"Calloc returns null" --- this means you have run out of memory.
however 18446744071562067968 is 16777216 tb, so this looks like a bug.%%%

%%%"Calloc returns null" --- this means you have run out of memory. however 18446744071562067968 is 16777216 tb, so this looks like a bug.%%%

%%%In Blender 2.67, when set GLSL mode, after then render, always crash (freeze).

In Blender 2.68 RC1, not always, but sometimes crash (freeze).

  • Windows 7 64-bit, Intel HD 3000 Graphic Card --%%%
%%%In Blender 2.67, when set GLSL mode, after then render, always crash (freeze). In Blender 2.68 RC1, not always, but sometimes crash (freeze). - Windows 7 64-bit, Intel HD 3000 Graphic Card --%%%

%%%Please don't mix up reports Hikmet, open a new bug report! %%%

%%%Please don't mix up reports Hikmet, open a new bug report! %%%

%%%It's either some kind of threading issue, or some kind of corrupted .png file.

Moritz, we really need file which demonstrates the issue. Strip is as much and possible and either attach it here or put it to http://pasteall.org/ and give link here.%%%

%%%It's either some kind of threading issue, or some kind of corrupted .png file. Moritz, we really need file which demonstrates the issue. Strip is as much and possible and either attach it here or put it to http://pasteall.org/ and give link here.%%%
Author

%%%Attaching does not work, I get "Missing Parameters". Anyway, I stripped it to the basics and it is crashing whenever I try to access a specific material with a texture or that particular texture through the image view. Find the file here: http://www.pasteall.org/blend/22889
I guess Sergey's hunch with the corrupted .png file was right.%%%

%%%Attaching does not work, I get "Missing Parameters". Anyway, I stripped it to the basics and it is crashing whenever I try to access a specific material with a texture or that particular texture through the image view. Find the file here: http://www.pasteall.org/blend/22889 I guess Sergey's hunch with the corrupted .png file was right.%%%
Member

%%%I cannot reproduce with that file either, seems like there should be "stars img.png" which causes trouble? please upload that image or try to pack it into the blend file.%%%

%%%I cannot reproduce with that file either, seems like there should be "stars img.png" which causes trouble? please upload that image or try to pack it into the blend file.%%%

%%%Closing report due to not enough information for us to fix the problem.

It's clearly crashing in loading a particular PNG file, but without that file we don't know what to fix. If you can upload such a PNG file somewhere we can reopen the report and investigate the problem.%%%

%%%Closing report due to not enough information for us to fix the problem. It's clearly crashing in loading a particular PNG file, but without that file we don't know what to fix. If you can upload such a PNG file somewhere we can reopen the report and investigate the problem.%%%
Author

%%%I would like to attach the png file in question but the interface returns an error message so I cannot upload it.%%%

%%%I would like to attach the png file in question but the interface returns an error message so I cannot upload it.%%%
Author

%%%Oh, it worked. Please reopen issue.%%%

%%%Oh, it worked. Please reopen issue.%%%

%%%fixed r59978.%%%

%%%fixed r59978.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36187
No description provided.