fix [#36187] Crash loading large images

alloc size was larger then an int, use size_t for all image alloc sizes.